<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="password_input_hint_st">رمز عبور</string>
    <string name="search_services_st">جستجوی سرویس ها</string>

    <!--    region services-->
    <string name="Kahroba_title_st">کهریا</string>
    <string name="rial_digital_title_st">ارز دیحیتال</string>
    <string name="fara_refah_title_st">فرا رفاه</string>
    <string name="charity_title_st">نیکو کاری</string>
    <string name="hamrahcard_title_st">همراه کارت</string>
    <string name="online_loan_title_st">تسهیلات آنلاین</string>
    <string name="ramzsaz_title_st">رمز ساز</string>
    <string name="refah_payment_title_st">رفاه پرداخت</string>
    <string name="inquiry_card_title_st">کارت به کارت</string>
    <string name="external_transfer">انتقال وجه بین بانکی</string>
    <string name="internal_transfer">انتقال وجه داخلی</string>
    <string name="date_title">تاریخ</string>
    <string name="password_login_st">ورود با رمز عبور</string>
    <string name="biometric_login_st">ورود با اثرانگشت</string>

    <!--  dialog  -->
    <string name="network_dialog_title_st">خطای ارتباطی</string>
    <string name="network_dialog_description_st">مشتری گرامی، ارتباط شما با سامانه رفالند برقرار نمی‌باشد. لطفا تنظیمات اینترنتی دستگاه خود را بررسی کنید.</string>
    <string name="network_setting_st">تنظیمات</string>
    <string name="close_st">بستن</string>
    <string name="ok_st">تایید</string>
    <string name="cancel_st">انصراف</string>
    <string name="inquiry_account_title"> داخلی</string>
    <string name="inquiry_mobile_title">موبایلی</string>
    <string name="inquiry_ach_title"> پایا</string>
    <string name="inquiry_rtgs_title"> ساتنا</string>
    <string name="inquiry_pol_title"> پل</string>
    <string name="inquiry_hub_title">هاب فناوران</string>

    <!--    widgets-->
    <string name="irr_currency">ریال</string>
    <string name="amount">مبلغ</string>
    <string name="toman_currency"> تومان</string>
    <string name="username">نام کاربری</string>
    <string name="call">تماس  با ما</string>
    <string name="refah_plus">رفاه پلاس</string>
    <string name="other_services">سایر</string>
    <string name="cancel">انصراف</string>
    <string name="confirm">تایید</string>
    <string name="month">ماه</string>
    <string name="year">سال</string>
    <string-array name="years">
        <item>1398</item>
        <item>1399</item>
        <item>1400</item>
        <item>1401</item>
        <item>1402</item>
        <item>1403</item>
        <item>1404</item>
        <item>1405</item>
        <item>1406</item>
        <item>1407</item>
        <item>1408</item>
        <item>1409</item>
    </string-array>
    <string-array name="month">
        <item>01</item>
        <item>02</item>
        <item>03</item>
        <item>04</item>
        <item>05</item>
        <item>06</item>
        <item>07</item>
        <item>08</item>
        <item>09</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
    </string-array>
    <!-- Network Dialog -->
    <string name="network_dialog_title">خطای ارتباطی</string>
    <string name="network_dialog_description">مشتری گرامی، ارتباط شما با سامانه رفالند برقرار نمی‌باشد. لطفا تنظیمات اینترنتی دستگاه خود را بررسی کنید.</string>
    <string name="network_setting">تنظیمات</string>
    <string name="close">بستن</string>
    <string name="connection_error">درخواست شما با خطا مواجه شد.</string>
    <string name="detail">جزییات</string>
    <string name="static_pass">رمز ثابت</string>
    <string name="pass_creator">رمز یکبار مصرف</string>
    <string name="two_factor_sms_pass">رمز یکبار مصرف پیامکی</string>
    <string name="dynamic_pass">رمز پویا</string>
    <string name="totp_title">دریافت رمز پویا</string>
    <string name="transfer_card_destination">به کارت مقصد</string>
    <string name="password">رمز عبور</string>
    <string name="mobile_no">شماره موبایل</string>
    <string name="infos_not_fetched_try_again">عدم دریافت اطلاعات دوباره تلاش کنید</string>
    <string name="daily">روزانه</string>
    <string name="weekly">هفتگی</string>
    <string name="bi_weekly">دوهفته یکبار</string>
    <string name="twice_monthly">دوبار در ماه</string>
    <string name="monthly">ماهانه</string>
    <string name="end_of_month">انتهای ماه</string>
    <string name="four_weeks">چهارهفته یکبار</string>
    <string name="bi_monthly">دوماه یکبار</string>
    <string name="quarterly">سه ماه یکبار</string>
    <string name="semi_annually">شش ماه یکبار</string>
    <string name="annually">سالیانه</string>
    <string name="ir">IR</string>
    <string name="search_hint">جستجو</string>

    <string name="card_selection_title">انتخاب کارت</string>
    <string name="card_number_st">شماره کارت</string>
    <string name="add_st">افزودن</string>
    <string name="add_card_st">افزودن کارت</string>

    <string name="information_list">لیست اطلاعات</string>
    <string name="tooltip_txt">
        رمز دوم مورد اشاره، رمز عملیات کارت به کارت نمی باشد. <br /><b>\n</b>
                        رمز دوم ثابت اخذ شده از شعبه یا رمز یکبار مصرف دریافت شده از دستگاه یا نرم افزار تولید رمز</string>
    <string name="data_requested">اطلاعات درخواستی</string>
    <string name="no_item_destination_account">حساب مقصدی یافت نشد</string>
    <string name="no_item_contact">مخاطبی یافت نشد.</string>
    <string name="search_contact">جستجوی مخاطب</string>
    <string name="edit_delete_contact">حذف و ویرایش \n مخاطب</string>
    <string name="transfer_ach_destination">شماره شبا مقصد</string>
    <string name="irr_iban_hint"><font size="14"> بدون  IR وارد کنید </font></string>
    <string name="irr_iban">IR-</string>
    <string name="digital_signature_necassary">بدون فعالسازی امضا دیجیتال امکان استفاده از
        خدمات چک دیجیتال ممکن نیست</string>
    <string name="transfer_card_pin_hint">رمز دوم ثابت یا یکبار مصرف</string>
    <string name="activation_account">فعالسازی حساب کاربری</string>
    <string name="transfer_amount">مبلغ </string>
    <string name="success_title">تراکنش موفق</string>
    <string name="receipt_transaction_ach">این رسید به معنی واریز واقعی وجه به سپرده ذینفع نیست</string>
    <string name="receipt_title">رسید تراکنش</string>
    <string name="receipt_fragment_source_account_title">حساب مبدا</string>
    <string name="receipt_share_image">اشتراک عکس</string>
    <string name="receipt_share_text">اشتراک متن</string>
    <string name="receipt_share">اشتراک گذاری</string>
    <string name="ok">تایید</string>
    <string name="signup">فراموشی رمز/ثبت نام</string>
    <string name="dialog_help_title">راهنما</string>
    <string name="bank_web">وب سایت بانک</string>
    <string name="version">نسخه: %1$s </string>
    <string name="survey_title">نظرسنجی</string>
    <string name="failed_title">خطا</string>
    <string name="failure_root_issue">کاربر گرامی، رفالند شما قادر به اجرا بر روی دستگاه‌های روت شده نمی‌باشد!</string>
    <string name="failure_hook_issue">کاربر گرامی، شما مجاز به استفاده از هوکینگ در برنامه نمی باشید</string>
    <string name="failure_simulator_issue">کاربر گرامی، رفالند شما قادر به اجرا بر روی محیط‌های شبیه‌ساز نمی‌باشد!</string>
    <string name="failure_debug_issue">کاربر گرامی، رفالند شما قادر به اجرا بر روی حالت دیباگ نمی‌باشد!</string>\
    <string name="card_list_title">لیست کارت</string>
    <!--    region vpn-->
    <string name="vpn_title">روشن بودن وی پی ان</string>
    <string name="vpn_title_description">امکان استفاده از نرم افزار، زمانی که وی پی ان روشن است وجود ندارد</string>
    <!--endregion-->
    <string name="exit">خروج</string>
    <string name="unregistered_description">مشتری گرامی، لطفا به یکی از شعب بانک رفاه مراجعه نموده و ضمن ثبت شماره تلفن همراه خود، پاکت چاپ شده نام‌کاربری و رمزعبور را دریافت کنید.</string>
    <string name="confirmed">متوجه شدم!</string>
    <string name="login_version"> نسخه  %1$s </string>

    <string name="type_contact_title">نوع مخاطب</string>
    <string name="contact_phone_item">لیست مخاطب‌ها تلفن همراه</string>
    <string name="contact_hamrah_card_item">لیست مخاطب‌های همراه کارت</string>
    <string name="not_supported_card_st">کارت مورد نظر پشتیبانی نمی شود</string>

    <string name="delete">حذف</string>
    <string name="delete_card_st">حذف کارت</string>
    <string name="edit">ویرایش</string>
    <string name="set_default">تعیین به عنوان پیش فرض</string>
    <string name="card_modification_sheet_title">ویرایش کارت</string>
    <string name="statement_filter_clear">حذف فیلتر</string>
    <string name="biometric_auth_title">احراز هویت بیومتریک</string>
    <string name="biometric_auth_desc">به منظور احراز هویت اثرانگشت خود را قرار داده یا در صورت فعال بودن احراز هویت با تصویر به دوربین نگاه کنید</string>
    <string name="just_refah_card_supported">فقط کارت های رفاهی در این صفحه پشتیبانی می شوند</string>
    <string name="card_added_already_st">کارت مورد نظر قبلا اضافه شده است</string>

    <string name="destination_card_scan">اسکن کارت مقصد</string>
</resources>