<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="bottom"
    android:background="@android:color/transparent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginTop="@dimen/_8sdp"
        android:background="@drawable/bottom_sheet_bg">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/refah_icon_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_8sdp"
            android:tint="@color/colorPrimaryDark"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_info"
            tools:ignore="VectorDrawableCompat" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvTitleSheet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/ui_normal_size"
            android:layout_marginEnd="8dp"
            android:fontFamily="@font/font_regular"
            android:text="@string/data_requested"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/ui_text_normal"
            app:layout_constraintBottom_toBottomOf="@id/refah_icon_img"
            app:layout_constraintStart_toEndOf="@+id/refah_icon_img"
            app:layout_constraintTop_toTopOf="@id/refah_icon_img" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/btnClosePopUp"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:tint="@color/gray"
            app:layout_constraintBottom_toBottomOf="@id/refah_icon_img"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/refah_icon_img"
            app:srcCompat="@drawable/ic_done"
            tools:ignore="VectorDrawableCompat" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/clear_filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="@dimen/_4sdp"
            android:layout_marginEnd="@dimen/_8sdp"
            android:text="@string/statement_filter_clear"
            tools:visibility="visible"
            android:visibility="gone"
            app:layout_constraintTop_toTopOf="@id/btnClosePopUp"
            app:layout_constraintBottom_toBottomOf="@+id/btnClosePopUp"
            app:layout_constraintEnd_toStartOf="@id/btnClosePopUp"
            android:textColor="@color/snackbar_blue"
            android:gravity="center"
            android:textSize="@dimen/ui_text_small" />
        <View
            android:id="@+id/line1"
            style="@style/line_style"
            android:layout_marginTop="@dimen/_8sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvTitleSheet" />

        <androidx.appcompat.widget.SearchView
            android:id="@+id/search_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_12sdp"
            android:layout_marginVertical="@dimen/_8sdp"
            android:background="@drawable/search_bg"
            android:clickable="true"
            android:focusable="true"
            app:defaultQueryHint="@string/search_hint"
            app:iconifiedByDefault="false"
            app:layout_constraintTop_toBottomOf="@id/line1"
            app:theme="@style/AppSearchView" />



        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_8sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:layout_marginEnd="@dimen/_8sdp"
            android:layout_marginBottom="@dimen/_8sdp"
            android:clipToPadding="false"
            android:focusableInTouchMode="true"
            android:minHeight="@dimen/_300sdp"
            android:paddingBottom="@dimen/_120sdp"
            android:visibility="visible"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintTop_toBottomOf="@id/search_view"
            tools:itemCount="19"
            tools:listitem="@layout/bottom_searchable_item" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.coordinatorlayout.widget.CoordinatorLayout>